[SMT]: Rename Item to Product
